# discuss.nez.run-api

./: .coveragerc  .flake8  .gcloudignore  .gitignore  Dockerfile  LICENSE  app.yaml  main.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: check.yml  deploy.yml  flake.yml
discuss_api/: urls.py  wsgi.py
discuss_api/apps/agenda/: admin.py  api.py  models.py  schema.py  serializers.py  tests.py  views.py
discuss_api/apps/agenda/api/: __init__.py  agenda.py  comments.py  statistics.py
discuss_api/apps/agenda/migrations/: 0001_initial.py  0002_updownhistory.py  0003_agenda_tags.py  0004_alter_updownhistory_agenda.py  0005_comment_content_comment_created_time_and_more.py  0006_vote_created_time_vote_updated_time_and_more.py  0007_comment_status.py  0008_alter_comment_status.py  0009_agreementhistory_value_alter_updownhistory_updown.py  0010_alter_vote_value.py  0011_alter_vote_value.py
discuss_api/apps/member/: admin.py  api.py  auth.py  models.py  schema.py
discuss_api/apps/member/migrations/: 0001_initial.py  0002_remove_token_valid.py  0002_remove_token_valid.py.bak  0003_userprofile.py  0004_profilepicture_userprofile_picture.py  0005_delete_token.py
discuss_api/apps/member/tests/: __init__.py
discuss_api/apps/multi_auth/: api.py  auth.py  models.py
discuss_api/apps/multi_auth/migrations/: 0001_initial.py
discuss_api/apps/multi_auth/providers/: facebook_provider.py  (+2 more)
discuss_api/apps/statistic/: api.py  schema.py
discuss_api/apps/status/: api.py  tests.py  views.py
discuss_api/apps/tag/: admin.py  api.py  models.py
(+1 files in other folders)
