[tool.poetry]
name = "discuss_api"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
python-dotenv = "^0.19.2"
dj-database-url = "^0.5.0"
djangorestframework = "^3.13.1"
psycopg2 = "^2.9.3"
django-ninja = "^0.17.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
coverage = "^6.3.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
